Creación de crud para nuevas tablas asociadas a plan de trabajo